# document-semantic

./: .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  _inspect_docx.py  config.yaml  main.py  my_plan.md  pyproject.toml  skills-lock.json  test_template_engine.py
.claude/: settings.local.json
docs/: build_plan.md  llm.txt  prompt_history.md
notebooks/: lab.ipynb
openspec/changes/add-pandoc-flow/: design.md  proposal.md  tasks.md
openspec/changes/mineru-parser-image-placeholder/: design.md  proposal.md  tasks.md
openspec/changes/refactor-semantic-to-processor/: design.md  proposal.md  tasks.md
openspec/specs/doc-parsing/: spec.md
openspec/specs/docx-test-suite/: spec.md
openspec/specs/mineru-api-parser/: spec.md
openspec/specs/parser-result-cache/: spec.md
openspec/specs/parser-token-auth/: spec.md
openspec/specs/pipeline-observability/: spec.md
openspec/specs/pipeline-testing/: spec.md
src/document_semantic/: __init__.py  cli.py
src/document_semantic/agents/: __init__.py  glossary_extractor.py  judger.py  pandoc_recognizer.py  protocol.py  refinement_agent.py  regex_recognizer.py  router_and_llm.py  semantic_annotator.py  translator.py  visual_tester.py
src/document_semantic/core/: config.py  constants.py  exceptions.py
src/document_semantic/models/: __init__.py  annotated_content.py  blocks.py  inline_elements.py  mineru_content.py  processor_output.py  semantic_document.py
src/document_semantic/observability/: __init__.py  logger.py
src/document_semantic/parsers/: __init__.py  markdownit_parser.py  mineru_parser.py  pandoc_parser.py  protocol.py  python_docx_parser.py  registry.py
src/document_semantic/pipeline/: __init__.py  config.py  pipeline.py
src/document_semantic/pipelines/: pipeline.py
src/document_semantic/recognizers/: __init__.py  protocol.py  regex_recognizer.py  router_and_llm.py
src/document_semantic/renderers/: advanced_docx_renderer.py  docx_renderer.py  latex_renderer.py
src/document_semantic/templates/: jcst_v2.py  registry.py  schema.py  yaml_loader.py
src/document_semantic/testing/: __init__.py  assertions.py  routing.py
src/document_semantic/transform/: chunker.py  protector.py
tests/: conftest.py  test_docx_flow.py  test_inspection_output.py  test_mineru_image_substitution.py  test_models_and_pipeline.py  test_parsers.py  test_recognizers.py
tests/docx/: conftest.py  test_1.docx  test_2.docx  test_3.docx  test_routes.yaml  tmp.md
tests/fixtures/: README.md  academic_document_expected.json  simple_document_expected.json
tests/transform/: test_chunker.py  test_protector.py
(+63 files in other folders)
