[project]
name = "document-semantic"
version = "0.1.0"
description = "A pluggable document semantic processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "python-docx>=1.1.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "linkify-it-py>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-snapshot>=0.9.0",
]
pandoc = [
    # pandoc is an external binary, no python package needed
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_semantic"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
